--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Haikus for Mona</title>
+    <title>Haikus for Everyone</title>
     <link href="/css/main.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Haikus for Mona">
@@ -15,9 +15,9 @@
         <img
           class="mona-images"
           src="images/<%= haikus[i].image %>" />
-        <div 
+        <div
           class="haiku-containers">
-          <p 
+          <p
             class="haikus"
           ><%- haikus[i].text %></p>
         </div>
